--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.1",
     "mongoose": "^8.2.3",
-    "nodemon": "^3.1.0"
+    "nanoid": "^5.0.6",
+    "nodemon": "^3.1.0",
+    "shortid": "^2.2.16"
   }
 }
